# newUserService

./: docker-compose.yml  dockerfile  pyproject.toml
src/newuserservice/: .env  app.py  config.py  extensions.py  models.py
src/newuserservice/migrations/versions/: 7738787a9404_atualizacao1.py
src/newuserservice/models/: usuario.py
src/newuserservice/routes/: usuario_route.py
src/newuserservice/services/: usuario_service.py
